@@ -8,11 +8,19 @@ copyright_holder = Florian Ragwitz
 [Prereqs]
 Module::Runtime = 0.012
 Sub::Exporter = 0.981
-Variable::Magic = 0.48
+Module::Implementation = 0.05
 
 [Prereqs / TestRequires ]
 ; provide done_testing()
 Test::More    = 0.88
+
+[Prereqs / ConfigureRequires ]
+; for proper can_xs
+; <xdg> ribasushi, I think you want EU::CB 0.26 minimum
+ExtUtils::CBuilder = 0.26
+
+[Metadata]
+dynamic_config = 1
 
 [MakeMaker::Custom]
 
