@@ -4,6 +4,9 @@ use Test::More;
 
 use B::Hooks::EndOfScope;
 
+plan skip_all => 'Skiping XS test in PP mode'
+  unless $INC{'B/Hooks/EndOfScope/XS.pm'};
+
 eval q[
     sub foo {
         BEGIN {
@@ -13,6 +16,7 @@ eval q[
 ];
 
 like($@, qr/^bar/);
+
 pass('no segfault');
 
 done_testing;
